The logic of sending a QR code for confirmation has been changed