@@ -9,18 +9,22 @@ import org.springframework.mail.javamail.MimeMessageHelper;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
+import org.springframework.web.util.UriUtils;
+import ru.sber.appointment.jwt_manager.JwtProvider;
 import ru.sber.appointment.service.interfaces.EmailService;
 
 import javax.mail.MessagingException;
 import javax.mail.internet.MimeMessage;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
+import java.util.List;
 
 @Service
 public class EmailServiceImpl implements EmailService {
     @Autowired
     JavaMailSender mailSender;
+    @Autowired
+    JwtProvider jwtProvider;
 
     @Override
     @Async
@@ -32,16 +36,17 @@ public class EmailServiceImpl implements EmailService {
         message.setSubject(subject);
 
         mailSender.send(message);
-        System.out.println("Отправлено");
-
     }
 
     @Override
     @Async
-    public void sendEmailWithQR(String to, String subject, String text) {
-        String qrCodeUrl = "http://api.qrserver.com/v1/create-qr-code/?data=" + URLEncoder.encode(text, StandardCharsets.UTF_8) + "&size=200x200";
+    public void sendEmailWithQR(String to, String username, Long id) {
+        String confirmToken = jwtProvider.generateConfirmToken(username);
+        String url = "http://localhost:8080/api/v1/ticket/put/tickets/confirmed/"+confirmToken+"/"+username+"/"+id;
+        System.out.println(url);
+        String qrCodeUrl = "http://api.qrserver.com/v1/create-qr-code/?data=" + url + "&size=400x400";
         HttpHeaders headers = new HttpHeaders();
-        headers.setAccept(Arrays.asList(MediaType.APPLICATION_OCTET_STREAM));
+        headers.setAccept(List.of(MediaType.APPLICATION_OCTET_STREAM));
         HttpEntity<String> entity = new HttpEntity<>(headers);
         RestTemplate restTemplate = new RestTemplate();
         ResponseEntity<byte[]> response = restTemplate.exchange(qrCodeUrl, HttpMethod.GET, entity, byte[].class);
@@ -52,11 +57,10 @@ public class EmailServiceImpl implements EmailService {
                 MimeMessageHelper helper = new MimeMessageHelper(message, true);
                 helper.setFrom("vortexoofnebula@gmail.com");
                 helper.setTo(to);
-                helper.setSubject(subject);
-                helper.setText(text, true);
+                helper.setSubject("Подтверждение");
+                helper.setText("Подтвердите запись на прием.");
                 helper.addAttachment("QRCode.png", new ByteArrayResource(qrCode));
                 mailSender.send(message);
-                System.out.println("Отправлено");
             } catch (MessagingException e) {
                 e.printStackTrace();
             }
